<resources>
    <string name="app_name">Drawing App</string>
    <string name="brush_size_dialog_title">Select brush size</string>
    <string name="brush_color_dialog_title">Select brush color</string>
    <string name="cd_open_brush_size">Open brush size selector</string>
    <string name="cd_open_gallery">Open gallery</string>
    <string name="perm_ext_storage_rat_title">Permission needed for External Storage.</string>
    <string name="perm_ext_storage_rat_msg">To access images on your device this app needs permission to access storage.</string>
    <string name="label_cancel">Cancel</string>
    <string name="sb_perm_allowed">Permission %1$s allowed.</string>
    <string name="sb_perm_denied">Permission %1$s denied.</string>
    <string name="cd_undo">Undo button</string>
    <string name="cd_redo">Button redo</string>
    <string name="cd_bg_image">Background image for the canvas</string>
    <string name="cd_save">Save your drawing</string>
    <string name="perm_ext_write_storage_rat_msg">Permission to save data to storage is needed.</string>
    <string name="sb_perm_unknown">Permission %1$s unknown.</string>
    <string name="res_save_file">File saved as %1$s.</string>
    <string name="res_save_failed">Failed to save bitmap file.</string>
    <string name="label_loading">Loading…</string>
    <string name="title_share_intent">Share your drawing</string>
    <string name="cd_share">Share your drawing</string>
    <string name="msg_share_error">Unable to share image.</string>
    <string name="warn_no_share_path">Nothing to share…</string>
</resources>