<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:id="@+id/fl_canvas_wrapper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/canvas_view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ib_open_brush_size_dialog">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cd_bg_image"/>

        <com.nilsnahooy.drawingapp.CanvasView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_background"
            android:id="@+id/cv_main_canvas" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/ib_open_gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ib_open_brush_size_dialog"
        android:src="@drawable/icon_folder"
        android:contentDescription="@string/cd_open_gallery" />

    <ImageButton
        android:id="@+id/ib_open_brush_size_dialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ib_open_gallery"
        app:layout_constraintEnd_toStartOf="@id/ib_open_brush_color_dialog"
        android:src="@drawable/icon_brush"
        android:contentDescription="@string/cd_open_brush_size" />

    <ImageButton
        android:id="@+id/ib_open_brush_color_dialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ib_open_brush_size_dialog"
        app:layout_constraintEnd_toStartOf="@id/ib_undo"
        android:src="@drawable/icon_palette"
        android:contentDescription="@string/cd_open_brush_size" />

    <ImageButton
        android:id="@+id/ib_undo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ib_open_brush_color_dialog"
        app:layout_constraintEnd_toStartOf="@id/ib_redo"
        android:src="@drawable/icon_undo"
        android:contentDescription="@string/cd_undo" />

    <ImageButton
        android:id="@+id/ib_redo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ib_undo"
        app:layout_constraintEnd_toStartOf="@id/ib_save"
        android:src="@drawable/icon_redo"
        android:contentDescription="@string/cd_redo" />

    <ImageButton
        android:id="@+id/ib_save"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ib_redo"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/icon_save"
        android:contentDescription="@string/cd_save" />
</androidx.constraintlayout.widget.ConstraintLayout>